--- a/index.html
+++ b/index.html
@@ -40,8 +40,15 @@
     <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Data</a>
       <div class="dropdown-menu">
-        <a class="dropdown-item" onclick="init('1')" href="# ">data1.json</a>
-        <a class="dropdown-item" onclick="init('2')" href="#">data2.json</a>
+        <a class="dropdown-item" onclick="updateFunction('1','true')" href="# ">data1.json</a>
+        <a class="dropdown-item" onclick="updateFunction('2','true')" href="#">data2.json</a>
+      </div>
+    </li>
+    <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Test</a>
+      <div class="dropdown-menu">
+        <a class="dropdown-item" onclick="testFunction('1','true')" href="# ">test1</a>
+        <a class="dropdown-item" onclick="testFunction('2','false')" href="#">test2</a>
       </div>
     </li>
     <li class="nav-item">
@@ -57,17 +64,19 @@
   </ul>
   <div class="container-fluid">
     <div class="row">
-
-      <div class="col-md-10" id="race_graph">
+      <div class="col-md-10">
+        <div class="row">
+          <div class="col-md-12" id="race_graph">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6" id="pie">
+          </div>
+          <div class="col-md-6" id="race_graph_origin">
+          </div>
+        </div>
       </div>
       <div class="col-md-2" id="json">
-        <!-- <pre class="col-md-4" id="json">hello</pre> -->
-      </div>
-    </div>
-    <div class="row">
-      <div id="pie" class="col-md-6">
-      </div>
-      <div id="race_graph_origin" class="col-md-6">
       </div>
     </div>
     <div class="row">
@@ -88,116 +97,124 @@
     var margin = {
         top: 70,
         right: 50,
-        bottom: 100,
+        bottom: 50,
         left: 80
       },
       width = 1000 - margin.left - margin.right,
-      height = 500 - margin.top - margin.bottom,
-      radius = 200;
+      height = 400 - margin.top - margin.bottom,
+      radius = 120;
     var color = ["#2C93E8", "#838690", "#F56C4E", "#A60F2B", "#648C85", "#B3F2C9", "#528C18", "#C3F25C"];
     var off_opacity = 0.5;
     // set the domains and ranges for main bar chart
-    var x = d3.scaleBand()
-      .range([0, width])
-      .padding([0.6]);
 
-    // temporal y-scale
-    var y = d3.scaleLinear()
-      .range([height, 0]);
+    // var x = d3.scaleBand()
+    //   .range([0, width])
+    //   .padding([0.6]);
+    //
+    // // temporal y-scale
+    // var y = d3.scaleLinear()
+    //   .range([height, 0]);
+    //
+    // var xAxis = d3.axisBottom(x);
+    //
+    // var yAxis = d3.axisLeft(y)
+    //   .ticks(8);
+    //
+    // // Add main graph svg
+    // var svg = d3.select("#race_graph")
+    //   .append("svg")
+    //   .attr("width", width + margin.left + margin.right) //1000
+    //   .attr("height", height + margin.top + margin.bottom); //400
+    //
+    // // Add groups for main bar chart
+    // var g0 = svg.append("g")
+    //   .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-    var xAxis = d3.axisBottom(x);
-
-    var yAxis = d3.axisLeft(y)
-      .ticks(8);
-
-    // Add main graph svg
-    var svg = d3.select("#race_graph")
-      .append("svg")
-      .attr("width", width + margin.left + margin.right)
-      .attr("height", height + margin.top + margin.bottom);
-
-    // Add groups for main bar chart
-    var g0 = svg.append("g")
-      .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-    // set the domains and ranges for Origin bar chart
-
-    // prepare data: count number for each origin
-    var heightOrigin = 300;
-    var xOrigin = d3.scaleBand()
-      .range([0, width / 2])
-      .padding([0.6]);
-
-    // temporal y-scale origin bar chart
-    var yOrigin = d3.scaleLinear()
-      .range([heightOrigin, 0]);
-
-    var xAxisOrigin = d3.axisBottom(xOrigin);
-
-    var yAxisOrigin = d3.axisLeft(yOrigin)
-      .ticks(8);
-    var origin_count;
-
-    // Add origin graph svg
-    var svgOrigin = d3.select("#race_graph_origin")
-      // .data(origin_count)
-      .append("svg")
-      .attr("width", width + margin.left + margin.right)
-      .attr("height", heightOrigin + margin.top + margin.bottom);
-
-    // Add groups for origin bar chart
-    var g0Origin = svgOrigin.append("g")
-      .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+    // // set the domains and ranges for Origin bar chart
+    //
+    // // prepare data: count number for each origin
+    // var heightOrigin = 200;
+    // var xOrigin = d3.scaleBand()
+    //   .range([0, width / 2])
+    //   .padding([0.6]);
+    //
+    // // temporal y-scale origin bar chart
+    // var yOrigin = d3.scaleLinear()
+    //   .range([heightOrigin, 0]);
+    //
+    // var xAxisOrigin = d3.axisBottom(xOrigin);
+    //
+    // var yAxisOrigin = d3.axisLeft(yOrigin)
+    //   .ticks(8);
+    // var origin_count;
+    //
+    // // Add origin graph svg
+    // var svgOrigin = d3.select("#race_graph_origin")
+    //   // .data(origin_count)
+    //   .append("svg")
+    //   // .attr("width", width + margin.left + margin.right)
+    //   .attr("width", 2 * width / 3)
+    //   .attr("height", heightOrigin + margin.top + margin.bottom);
+    //
+    // // Add groups for origin bar chart
+    // var g0Origin = svgOrigin.append("g")
+    //   .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
     // these arrays record have groups have been clicked to set filtering of data
     var categoryArr = [];
     var originArr = [];
     var num;
-    var index;
-    var indexTemp; //a number never used
+    var index = 1;
+    var indexTemp = ''; //a number never used
     // var indexInit = 1; //default index so that data1.json will be called first
-    init(1);
-    var drawPie = true;
+    // init(1);
+    var drawNew = true;
+    var num;
+    var str;
 
-    function init(indexInit) {
-      categoryArr = [];
-      originArr = [];
-      data = [];
-      newdata = [];
-      index = indexInit;
-      // console.log("init -> index = " + index);
-      console.log("init -> indexInit = " + indexInit);
-      updateFunction(index);
-    }
+    // function init(indexInit) {
+    //   categoryArr = [];
+    //   originArr = [];
+    //   data = [];
+    //   newdata = [];
+    //   index = indexInit;
+    //   // console.log("init -> index = " + index);
+    //   console.log("init -> indexInit = " + indexInit);
+    //   updateFunction(index);
+    // }
+    updateFunction(index, drawNew);
 
     function refresh(index) { //clears the data filtering arrays
       categoryArr = [];
       originArr = [];
-      data = [];
-      newdata = [];
-      console.log("refresh -> index = " + index);
-      updateFunction(index);
+      // data = [];
+      // newdata = [];
+      drawNew = true;
+      updateFunction(index, drawNew);
     }
 
-    function updateFunction(index) {
-      // console.log("updateFunction -> indexTemp: " + indexTemp);
-      console.log("updateFunction -> index: " + index);
-      // console.log("updateFunction -> indexInit: " + indexInit);
+    function updateFunction(index, drawNew) {
 
-      // if (indexTemp != index) { //when a new data set is used clear the filter arrays
-      //   categoryArr = [];
-      //   originArr = [];
-      // }
-      // indexTemp = index;
+      if (indexTemp != index) { //when a new data set is used clear the filter arrays
+        drawNew = true;
+        // refresh(index);
+      }
+      indexTemp = index;
 
       d3.json("data" + index + ".json", function(error, newdata) {
-        console.log("json index = " + index);
+
         var stringConditionCategory = ''; //construct condition
         var stringConditionOrigin = ''; //construct condition
         var stringCondition = '';
 
         if (error) throw error;
         data = newdata;
+
+        if (drawNew == true) {
+          //clearing filter arrays
+          originArr = [];
+          categoryArr = [];
+        }
 
         if (originArr.length > 0) { //if originArr has elements
           for (var i = 0; i < originArr.length; i++) {
@@ -236,22 +253,47 @@
         })
 
         // To display json in html page
-        document.getElementById("json").innerHTML = "<pre>" + JSON.stringify(newdata, null, 2) + "</pre>";
+        document.getElementById("json").innerHTML = "<h5>data" + index + ".json</h5>" + "<pre>" + JSON.stringify(newdata, null, 2) + "</pre>";
 
+        d3.select("svg").remove(); //this will clear all charts
         updateBar();
-        updatePie(); //only draw pie chart initially
-        updateBarOrigin();
-        // if (drawPie) {
-        //   drawPie = false;
-        //   updatePie(); //only draw pie chart initially
-        //   updateBarOrigin();
-        // };
-        // updateBarOrigin();
+
+        if (drawNew == true) {
+          drawNew = false;
+          updatePie(index); //only draw pie chart initially
+          updateBarOrigin(index);
+        };
       });
     }
 
-    //----------------------start main bar chart---------------------
-    function updateBar(err, newdata) {
+    //---------------------------------------------------------------
+    //--------------****** Start Main Bar Chart ******---------------
+    //---------------------------------------------------------------
+
+    function updateBar(err, newdata) { //****************************
+
+      var x = d3.scaleBand()
+        .range([0, width])
+        .padding([0.6]);
+
+      // temporal y-scale
+      var y = d3.scaleLinear()
+        .range([height, 0]);
+
+      var xAxis = d3.axisBottom(x);
+
+      var yAxis = d3.axisLeft(y)
+        .ticks(8);
+
+      // Add main graph svg
+      var svgBar = d3.select("#race_graph")
+        .append("svg")
+        .attr("width", width + margin.left + margin.right) //1000
+        .attr("height", height + margin.top + margin.bottom); //400
+
+      // Add groups for main bar chart
+      var g0 = svgBar.append("g")
+        .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
       // set the domains
       x.domain(data.map(function(d) {
@@ -264,16 +306,16 @@
       })]).nice();
 
       // Add the X Axis
-      svg.select(".x.axis").call(xAxis);
-      svg.select(".x.axis").remove();
-      svg.append("g")
+      svgBar.select(".x.axis").call(xAxis);
+      svgBar.select(".x.axis").remove();
+      svgBar.append("g")
         .attr("class", "x axis")
         .attr("transform", "translate(" + (margin.left) + "," + (height + margin.top) + ")")
         .call(xAxis);
 
       // Add the y axis on left
-      svg.select(".y.axis").remove();
-      svg.append("g")
+      svgBar.select(".y.axis").remove();
+      svgBar.append("g")
         .attr("class", "y axis")
         .attr("transform", "translate(" + (margin.left) + "," + margin.top + ")")
         .call(yAxis);
@@ -344,13 +386,51 @@
         }) // after the transition bars goes to its correct y position
         .attr("height", function(d, i) {
           return height - y(d.value)
+        })
+        .style("fill", function(d, i) {
+          return color[i];
         }); // after transition bar grows to its full height
 
     }; // end of updateBar() function
 
+    //---------------------------------------------------------------
+    //--------------****** Start Bar Chart Origin ******-------------
+    //---------------------------------------------------------------
 
-    //----------------------Start Bar Chart Origin------------------
-    function updateBarOrigin(err, newdata) {
+    function updateBarOrigin(index) { //***********************
+      // set the domains and ranges for Origin bar chart
+      d3.select(".originClass").remove();
+
+      originArr.length = 0;
+      categoryArr.length = 0;
+      // prepare data: count number for each origin
+      var heightOrigin = 200;
+      var xOrigin = d3.scaleBand()
+        .range([0, width / 2])
+        .padding([0.6]);
+
+      // temporal y-scale origin bar chart
+      var yOrigin = d3.scaleLinear()
+        .range([heightOrigin, 0]);
+
+      var xAxisOrigin = d3.axisBottom(xOrigin);
+
+      var yAxisOrigin = d3.axisLeft(yOrigin)
+        .ticks(8);
+      var origin_count;
+
+      // Add origin graph svg
+      var svgOrigin = d3.select("#race_graph_origin")
+        // .data(origin_count)
+        .append("svg")
+        .attr("class", "originClass")
+        // .attr("width", width + margin.left + margin.right)
+        .attr("width", 2 * width / 3)
+        .attr("height", heightOrigin + margin.top + margin.bottom);
+
+      // Add groups for origin bar chart
+      var g0Origin = svgOrigin.append("g")
+        .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
       origin_count = d3.nest()
         .key(function(d) {
@@ -365,12 +445,6 @@
       xOrigin.domain(origin_count.map(function(d) {
         return d.key;
       }));
-      //
-      // var x1 = d3.scaleBand()
-      //        .domain(club_count.map(function(d) {
-      //          // console.log(d.key);//d.key is club names
-      //          return d.key
-      //        }))
 
       // set domain temporal y-scale
       yOrigin.domain([0, d3.max(origin_count, function(d) {
@@ -397,17 +471,52 @@
 
       // JOIN new data with old elements
       var newRects0Origin = g0Origin.selectAll(".barOrigin")
-        // .data(data, function(d) {
         .data(origin_count, function(d) {
           return d.key;
         });
 
+      // EXIT old elements not present in new data
+      newRects0Origin.exit()
+        .attr("class", function(d) {
+          return "exit barOrigin";
+        }) // fill red
+        .transition(d3.transition()
+          // .delay(0)
+          .duration(750))
+        .attr("width", xOrigin.bandwidth())
+        .attr("y", function(d) {
+          return heightOrigin;
+        }) // old elements which are leaving the chart, their y position transitions to the xaxis
+        .attr("height", function(d) {
+          return 0;
+        }) // old elements which are leaving the chart, therir height trasnitions to 0
+        .remove();
+
+      // UPDATE old elements present in new data
+      newRects0Origin.attr("class", function(d) {
+          return "update barOrigin";
+        })
+        .transition(d3.transition()
+          .delay(500))
+        .duration(750)
+        .attr("width", xOrigin.bandwidth())
+        .attr("x", function(d) {
+          return xOrigin(d.key);
+        }) // old elememnts in new data transition to their new position
+        .attr("y", function(d) {
+          return yOrigin(d.value)
+        }) // old elememnts in new data transition to their y position
+        .attr("height", function(d, i) {
+          return heightOrigin - yOrigin(d.value)
+        }); // old elememnts in new data transition to their correct height
+
+
+      // ENTER new elements present in new data
       newRects0Origin
         .enter()
         .append('rect')
         .style("opacity", function(d, i) {
           if (originArr.indexOf(d.key) == -1) { //category is not in the categoryArr array
-            console.log("origin bar chart");
             return off_opacity;
           } else {
             return 1.0;
@@ -430,7 +539,6 @@
             originArr.push(d.key);
             d3.selectAll(".barOrigin" + i) //all slices
               .style("opacity", function(d, i) {
-                // console.log(category_count.length);
                 if (originArr.length == 0) { // how to do this
                   return 1.0;
                 }
@@ -441,7 +549,7 @@
                 }
               });
           }
-          updateFunction(index);
+          updateFunction(index, 'false');
         })
         .on('mouseover', function(d, i) {
           d3.selectAll(".barOrigin" + i) //all bars
@@ -489,10 +597,13 @@
       // after transition bar grows to its full height
     }; // end of updateBarOrigin() function
 
-    //----------------------start of pie chart--------------------
-    function updatePie(err, newdata) {
+    //---------------------------------------------------------------
+    //---------------****** Start of Pie Chart *******---------------
+    //---------------------------------------------------------------
 
+    function updatePie(index) {
       // Generate an array object on categories as a category
+      d3.select(".pieClass").remove();
       category_count = d3.nest()
         .key(function(d) {
           return d.category;
@@ -501,29 +612,25 @@
           return leaves.length;
         })
         .entries(data);
-
       var category_arcs = d3.pie()
         .padAngle(.02)
         .value(function(d) {
           return d.value;
         })
         (category_count);
-
-      var pie = d3.pie()
-        .value(function(d) {
-          return d.category;
-        })(category_arcs);
-
       var arc = d3.arc()
         .outerRadius(radius - 30)
         .innerRadius(radius / 3);
 
       var labelArc = d3.arc()
         .outerRadius(radius - 30)
-        .innerRadius(radius - 150);
+        .innerRadius(radius - 100);
+
       var heightPie = 450;
-      var svgPie = d3.select("#pie")
+
+      svgPie = d3.select("#pie")
         .append("svg")
+        .attr("class", "pieClass")
         .attr("width", width)
         .attr("height", heightPie)
         .append("g")
@@ -548,7 +655,6 @@
           }
         })
         .on('click', function(d, i) {
-          // d3.select(this).classed("clickedClass", d3.select(this).classed("clickedClass") ? false : true);
           if (categoryArr.includes(d.data.key)) {
             num = categoryArr.indexOf(d.data.key);
             categoryArr.splice(num, 1); //remove category
@@ -564,7 +670,6 @@
             categoryArr.push(d.data.key); //add category
             d3.selectAll(".slice" + i) //all slices
               .style("opacity", function(d, i) {
-                // console.log(category_count.length);
                 if (categoryArr.length == 0) { // how to do this
                   return 1.0;
                 }
@@ -574,7 +679,6 @@
                   return 1.0;
                 }
               });
-
             d3.selectAll(".slice" + i) //all slices
               .style("opacity", function(d, i) {
                 if (categoryArr.indexOf(d.data.key) == -1) { //category is not in the categoryArr array
@@ -584,7 +688,7 @@
                 }
               });
           };
-          updateFunction(index);
+          updateFunction(index, 'false');
         })
         .on('mouseover', function(d, i) {
           d3.selectAll(".slice" + i) //all slices
@@ -609,7 +713,6 @@
         .style("fill", function(d, i) {
           return color[i];
         });
-
       g.append("text")
         .attr("transform", function(d) {
           return "translate(" + labelArc.centroid(d) + ")";
@@ -620,7 +723,6 @@
         .style("text-anchor", "middle")
         .style("font-size", "15px")
         .style("fill", "white");
-
       svgPie.append("text")
         .attr("transform", "translate(0," + (0 - radius) + ")")
         .text("Count occurences of each category")
@@ -634,7 +736,6 @@
           return arc(i(t));
         };
       };
-
       // ****************** - PIE Chart - *******
     }; // end of updatePie() function
   </script>
