--- a/index.html
+++ b/index.html
@@ -44,18 +44,11 @@
         <a class="dropdown-item" onclick="updateFunction('2','true')" href="#">data2.json</a>
       </div>
     </li>
-    <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Test</a>
-      <div class="dropdown-menu">
-        <a class="dropdown-item" onclick="testFunction('1','true')" href="# ">test1</a>
-        <a class="dropdown-item" onclick="testFunction('2','false')" href="#">test2</a>
-      </div>
-    </li>
     <li class="nav-item">
       <a class="nav-link" href="https://github.com/shanegibney/D3-v4-Bar-Chart-Update-Pattern">Link</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" onclick="refresh()" href="#">Refresh</a>
+      <a class="nav-link" onclick="refreshFunction('1','true')" href="#">Refresh</a>
     </li>
     <!-- <li class="nav-item">
       <a class="nav-link disabled" href="#">INTERACTIVE DASH-BOARD (d3.js v4)</a>
@@ -83,9 +76,8 @@
       <div class="col-md-12">
         <ul>
           <li>refresh data button</li>
-          <li>Add update pattern to pie chart for when new race data is used, not for when filtering. so for when used initially</li>
+          <li>Add update pattern to pie chart for when new race data is used, not for when filtering. So for when used initially. This is the implementation of teh arcTween function. It may need .call()</li>
           <li>Create PDF of each element live or of whole page. There is a library which places HTML elements into pdf documents.</li>
-          <li>Put name of data set somewhere to show which data set is being used</li>
         </ul>
       </div>
     </div>
@@ -172,6 +164,16 @@
     var num;
     var str;
 
+    function refreshFunction(index, drawNew) { //clears the data filtering arrays
+      console.log("I am refresh");
+      // categoryArr = [];
+      // originArr = [];
+      // data = [];
+      // newdata = [];
+      // drawNew = true;
+      // updateFunction(index, drawNew);
+    }
+
     // function init(indexInit) {
     //   categoryArr = [];
     //   originArr = [];
@@ -183,15 +185,6 @@
     //   updateFunction(index);
     // }
     updateFunction(index, drawNew);
-
-    function refresh(index) { //clears the data filtering arrays
-      categoryArr = [];
-      originArr = [];
-      // data = [];
-      // newdata = [];
-      drawNew = true;
-      updateFunction(index, drawNew);
-    }
 
     function updateFunction(index, drawNew) {
 
